# terminalhelper

./: .gitignore  CMakeLists.txt  README.md  run_helper.sh
src/: main.cpp
src/API/: GPTCommunicator.cpp  GPTCommunicator.h
src/Utils/: BashCommandExtractor.cpp  BashCommandExtractor.h  FileHandler.cpp  FileHandler.h  InputHandler.cpp  InputHandler.h  OutputHandler.cpp  OutputHandler.h
